Fixed a misalignment on the product set pages
Close jackjonesfashion/tasks#93

--- a/src/static_files/styles/jack-jones.styl
+++ b/src/static_files/styles/jack-jones.styl
@@ -56,6 +56,13 @@
 		.grid_10
 			width 258px
 			background-image none
+			float left
+			
+		.grid_3
+			margin 0
+			
+		.product_set_image img
+			margin 20px 0
 
 #branded.pt_productdetails .productset
 	#subProduct2Div
